---
source: crates/client/src/client/schema/tx.rs
expression: query.query
---
mutation($txs: [HexString!]!, $utxoValidation: Boolean) {
  dryRun(txs: $txs, utxoValidation: $utxoValidation) {
    id
    status {
      __typename
      ... on DryRunSuccessStatus {
        programState {
          returnType
          data
        }
        receipts {
          param1
          param2
          amount
          assetId
          gas
          digest
          contract
          is
          pc
          ptr
          ra
          rb
          rc
          rd
          reason
          receiptType
          to
          toAddress
          val
          len
          result
          gasUsed
          data
          sender
          recipient
          nonce
          contractId
          subId
        }
      }
      ... on DryRunFailureStatus {
        programState {
          returnType
          data
        }
        receipts {
          param1
          param2
          amount
          assetId
          gas
          digest
          contract
          is
          pc
          ptr
          ra
          rb
          rc
          rd
          reason
          receiptType
          to
          toAddress
          val
          len
          result
          gasUsed
          data
          sender
          recipient
          nonce
          contractId
          subId
        }
      }
    }
  }
}


